"avancement sur le site en dur"

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/menu.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/menu.html
@@ -8,46 +8,111 @@
     <link href="style/style.css" type="text/css" rel="stylesheet" >
 </head>
 
-<body background="img/fond.jpg">
+<body>
     <div id="principal">
-        <!--URL utilisées dans l'animation-->
-        <!--texte utilisé dans l'animation-->
-        <!-- saved from url=(0013)about:internet -->
-        <script language="javascript">
-            if (AC_FL_RunContent == 0) {
-                alert("Cette page nécessite le fichier AC_RunActiveContent.js.");
-            } else {
-                AC_FL_RunContent(
-                    'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0',
-                    'width', '800',
-                    'height', '118',
-                    'src', 'menu',
-                    'quality', 'high',
-                    'pluginspage', 'http://www.macromedia.com/go/getflashplayer',
-                    'align', 'middle',
-                    'play', 'true',
-                    'loop', 'true',
-                    'scale', 'showall',
-                    'wmode', 'transparent',
-                    'devicefont', 'false',
-                    'id', 'menu',
-                    'bgcolor', '#7e899d',
-                    'name', 'menu',
-                    'menu', 'true',
-                    'allowFullScreen', 'false',
-                    'allowScriptAccess','sameDomain',
-                    'movie', 'menu',
-                    'salign', ''
-                    ); //end AC code
-            }
-        </script>
-        <noscript>
-            <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="800" height="118" id="menu" align="middle">
-            <param name="allowScriptAccess" value="sameDomain" />
-            <param name="allowFullScreen" value="false" />
-            <param name="movie" value="menu.swf" /><param name="quality" value="high" /><param name="wmode" value="transparent" /><param name="bgcolor" value="#7e899d" />	<embed src="menu.swf" quality="high" wmode="transparent" bgcolor="#7e899d" width="800" height="118" name="menu" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
-            </object>
-        </noscript>
+
+        <table cellpadding="0" cellspacing="0" id="main_content">
+    		<tr>
+       			<td class="menu" colspan="3">
+                            
+                    <!--URL utilisées dans l'animation-->
+                    <!--texte utilisé dans l'animation-->
+                    <!-- saved from url=(0013)about:internet -->
+                    <script language="javascript">
+                        if (AC_FL_RunContent == 0) {
+                            alert("Cette page nécessite le fichier AC_RunActiveContent.js.");
+                        } else {
+                            AC_FL_RunContent(
+                                'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0',
+                                'width', '800',
+                                'height', '118',
+                                'src', 'menu',
+                                'quality', 'high',
+                                'pluginspage', 'http://www.macromedia.com/go/getflashplayer',
+                                'align', 'middle',
+                                'play', 'true',
+                                'loop', 'true',
+                                'scale', 'showall',
+                                'wmode', 'transparent',
+                                'devicefont', 'false',
+                                'id', 'menu',
+                                'bgcolor', '#7e899d',
+                                'name', 'menu',
+                                'menu', 'true',
+                                'allowFullScreen', 'false',
+                                'allowScriptAccess','sameDomain',
+                                'movie', 'menu',
+                                'salign', ''
+                                ); //end AC code
+                        }
+                    </script>
+                    <noscript>
+                        <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="800" height="118" id="menu" align="middle">
+                        <param name="allowScriptAccess" value="sameDomain" />
+                        <param name="allowFullScreen" value="false" />
+                        <param name="movie" value="menu.swf" /><param name="quality" value="high" /><param name="wmode" value="transparent" /><param name="bgcolor" value="#7e899d" />	<embed src="menu.swf" quality="high" wmode="transparent" bgcolor="#7e899d" width="800" height="118" name="menu" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+                        </object>
+                    </noscript>
+        		</td>
+       		</tr>
+            <tr>
+            	<td colspan="3" class="title">Nos réalisations</td>
+            </tr>
+            <tr>
+            	<td colspan="3" class="under_title"></td>
+            </tr>
+            <tr>
+            	<td class="c01"></td>
+                <td class="c02"></td>
+                <td class="c03"></td>
+            </tr>
+            <tr>
+            	<td class="c04"></td>
+                <td class="c05">
+                	<p>Paragraphe 1 dshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 2 gsjdhfjkdh dskjh jsdkhf kjsdf ds sd sdjfkljhskjgh fds .</p>
+                    <p>Paragraphe 3 jskdfhkjdh kjdsh kjdhkh jsdkhf dsqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 4 sdf sdlk kdskfl jlkdsj kqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                                    	<p>Paragraphe 1 dshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 2 gsjdhfjkdh dskjh jsdkhf kjsdf ds sd sdjfkljhskjgh fds .</p>
+                    <p>Paragraphe 3 jskdfhkjdh kjdsh kjdhkh jsdkhf dsqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 4 sdf sdlk kdskfl jlkdsj kqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                                    	<p>Paragraphe 1 dshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 2 gsjdhfjkdh dskjh jsdkhf kjsdf ds sd sdjfkljhskjgh fds .</p>
+                    <p>Paragraphe 3 jskdfhkjdh kjdsh kjdhkh jsdkhf dsqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 4 sdf sdlk kdskfl jlkdsj kqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                                    	<p>Paragraphe 1 dshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 2 gsjdhfjkdh dskjh jsdkhf kjsdf ds sd sdjfkljhskjgh fds .</p>
+                    <p>Paragraphe 3 jskdfhkjdh kjdsh kjdhkh jsdkhf dsqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                    <p>Paragraphe 4 sdf sdlk kdskfl jlkdsj kqfddshjfdsj hsd sjhdf kjhsdjf khskjfh jskd.</p>
+                </td>
+                <td class="c06"></td>
+            </tr>
+            <tr>
+            	<td class="c07"></td>
+                <td class="c08"></td>
+                <td class="c09"></td>
+            </tr>
+            <tr>
+            	<td colspan="3" class="under_main"></td>
+            </tr>
+            <tr>
+            	<td class="cb01"></td>
+                <td class="cb02"></td>
+                <td class="cb03"></td>
+            </tr>
+            <tr>
+            	<td class="cb04"></td>
+                <td class="cb05"></td>
+                <td class="cb06"></td>
+            </tr>
+            <tr>
+            	<td class="cb07"></td>
+                <td class="cb08"></td>
+                <td class="cb09"></td>
+            </tr>
+    	</table>
     </div>
+
 </body>
 </html>
