change jpeg en gif et ajout logo + on peut cliquer sur les 2 affinitic (le logo affinitic qui passe au travers est clicable, ai eu du mal pour que ca colle)

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/menu.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/menu.html
@@ -56,7 +56,11 @@
         		</td>
        		</tr>
             <tr>
-            	<td colspan="3" class="title">Nos réalisations</td>
+            	<td colspan="3" class="title">
+                    <div class="affinitic_logo_bas"><a href="http://www.affinitic.be/"><img src="img/affinitic_logo_bas.gif" /></a></div>
+                	<div class="title_txt">Nos réalisations</div>
+
+                </td>
             </tr>
             <tr>
             	<td colspan="3" class="under_title"></td>
@@ -103,7 +107,14 @@
             </tr>
             <tr>
             	<td class="cb04"></td>
-                <td class="cb05"></td>
+                <td class="cb05">
+                	<div class="logos_footer">
+                        <a href="http://www.plone.org/" target="_blank"><img class="imglogo" src="img/plonelogo.gif" /></a>
+                        <a href="http://www.zope.org/" target="_blank"><img class="imglogo" src="img/zopelogo.gif" /></a>
+                        <a href="http://www.python.org/" target="_blank"><img class="imglogo" src="img/pythonlogo.gif" /></a>
+                        <a href="http://www.adobe.com/" target="_blank"><img class="imglogo" src="img/flashlogo.gif" /></a>
+                    </div>
+                </td>
                 <td class="cb06"></td>
             </tr>
             <tr>
