First real example :-)

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -1,7 +1,10 @@
 <html>
-<head>
-</head>
+<head></head>
 <body>
+
+ <div id="document-content">
+   Very basic theme for now :-)
+ </div>
 
 </body>
 </html>
