Temporary help for navigation :-)

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -2,6 +2,16 @@
 <head></head>
 <body>
 
+ <div id="navtabs">
+   Temporaire !!!!!
+ </div>
+
+------
+
+ <div id="languages">
+   Temporaire !!!!!
+ </div>
+
  <div id="document-content">
    Very basic theme for now :-)
  </div>
