--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -18,11 +18,103 @@
     </div>
 
     <div class="content" id="content">
-      content
+      <div class="content-top">
+        <span class="title">Affinitic</span>
+      </div>
+      <div class="content-top-second"/></div>
+
+      <div class="content-middle">
+        <div class="content-middle-center">
+          <table class="content-table" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+              <td class="content-table-left"></td>
+              <td class="content-table-top-left"></td>
+              <td class="content-table-top"></td>
+              <td class="content-table-top-right"></td>
+              <td class="content-table-right"></td>
+            </tr>
+            <tr>
+              <td class="content-table-left"></td>
+              <td></td>
+              <td class="page-content">
+                <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
+                dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
+                <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
+                dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
+                <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
+                dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
+                <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
+                dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
+                <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
+                dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
+              </td>
+              <td></td>
+              <td class="content-table-right"></td>
+            </tr>
+            <tr>
+              <td class="content-table-left"></td>
+              <td class="content-table-bottom-left"></td>
+              <td class="content-table-bottom"></td>
+              <td class="content-table-bottom-right"></td>
+              <td class="content-table-right"></td>
+            </tr>
+          </table>
+        </div>
+
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tr>
+            <td class="content-bottom-left">
+            </td>
+            <td class="content-bottom-center">
+            </td>
+            <td class="content-bottom-right">
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <div class="footer" id="footer">
-      footer
+      <table cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td class="footer-table-top-left">
+          </td>
+          <td class="footer-table-top-center">
+          </td>
+          <td class="footer-table-top-right">
+          </td>
+        </tr>
+        <tr>
+          <td class="footer-table-middle" colspan="3">
+            Rue des Canadiens, 248
+            B-7022 Hyon
+            Belgique<br />
+            00 32 65 82 55 79<br />
+            00 32 499 52 92 29
+          </td>
+        </tr>
+        <tr>
+          <td class="footer-table-bottom-left">
+          </td>
+          <td class="footer-table-bottom-center">
+          </td>
+          <td class="footer-table-bottom-right">
+          </td>
+        </tr>
+      </table>
+      <div class="powered">
+        <ul>
+          <li>
+            <a href="http://plone.org/"><img src="images/plone_powered.gif" /></a>
+          </li>
+          <li>
+            <a href="http://zope.org/"><img src="images/zope_powered.gif" /></a>
+          </li>
+          <li>
+            <a href="http://python.org/"><img src="images/python_powered.gif" /></a>
+          </li>
+        </ul>
+    </div>
     </div>
 
   </div>
