add shadows to skin

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -29,13 +29,13 @@
             <tr>
               <td class="content-table-left"></td>
               <td class="content-table-top-left"></td>
-              <td class="content-table-top"></td>
+              <td class="content-table-top-center"></td>
               <td class="content-table-top-right"></td>
               <td class="content-table-right"></td>
             </tr>
             <tr>
               <td class="content-table-left"></td>
-              <td></td>
+              <td class="content-table-middle-left"></td>
               <td class="page-content">
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
                 dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
@@ -48,13 +48,13 @@
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
                 dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
               </td>
-              <td></td>
+              <td class="content-table-middle-right"></td>
               <td class="content-table-right"></td>
             </tr>
             <tr>
               <td class="content-table-left"></td>
               <td class="content-table-bottom-left"></td>
-              <td class="content-table-bottom"></td>
+              <td class="content-table-bottom-center"></td>
               <td class="content-table-bottom-right"></td>
               <td class="content-table-right"></td>
             </tr>
