Add page content and copy static template/images/style

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -36,7 +36,7 @@
             <tr>
               <td class="content-table-left"></td>
               <td class="content-table-middle-left"></td>
-              <td class="page-content">
+              <td id="page-content">
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
                 dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
