Add reflection effect

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -1,6 +1,6 @@
 <html>
-
 <head>
+  <script type="text/javascript" src="reflection.js"></script>
   <link href="styles/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
