--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -19,7 +19,7 @@
 
     <div class="content" id="content">
       <div class="content-top">
-        <span class="title">Affinitic</span>
+        <span id="title" class="title">Affinitic</span>
       </div>
       <div class="content-top-second"/></div>
 
@@ -36,7 +36,7 @@
             <tr>
               <td class="content-table-left"></td>
               <td class="content-table-middle-left"></td>
-              <td id="page-content">
+              <td id="page-content" class="page-content">
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
                 dsjkfhdssdjfdkjsh fkdjs hfkjdh fkds. jsdhf kjfsdk kfds.sdjkhf hsd.</p>
                 <p>jhsjfd jkdhsfjsd kfjdsh. sdjhfjkdsfds sdkjfhkdjhfs kdsh fkjdshfds.
