div sur logo affinitic pour clic retour homepage. Correction une /div de trop

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -15,13 +15,16 @@
         <param name="movie" value="menu.swf">
         <embed src="menu.swf" width="800" height="118"/>
       </object>
-    </div>
+      <div id="logo-affinitic">
+          <a href="http://www.affinitic.be"></a>
+      </div>
+    </div><!--header-->
 
     <div class="content" id="content">
       <div class="content-top">
         <span id="title" class="title">Affinitic</span>
       </div>
-      <div class="content-top-second"/></div>
+      <div class="content-top-second"></div>
 
       <div class="content-middle">
         <div class="content-middle-center">
@@ -71,8 +74,8 @@
             </td>
           </tr>
         </table>
-      </div>
-    </div>
+      </div><!--content middle-->
+    </div><!--content-->
 
     <div class="footer" id="footer">
       <table cellpadding="0" cellspacing="0" border="0">
@@ -114,12 +117,12 @@
             <a href="http://python.org/"><img src="python_powered.gif" /></a>
           </li>
         </ul>
-    </div>
+    </div><!--footer-->
     </div>
 
-  </div>
+  </div><!--site-->
 
-</div>
+</div><!--main-->
 
 </body>
 
