--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -18,7 +18,7 @@
       <div id="logo-affinitic">
           <a href="http://www.affinitic.be"></a>
       </div>
-    </div><!--header-->
+    </div>
 
     <div class="content" id="content">
       <div class="content-top">
@@ -74,8 +74,8 @@
             </td>
           </tr>
         </table>
-      </div><!--content middle-->
-    </div><!--content-->
+      </div>
+    </div>
 
     <div class="footer" id="footer">
       <table cellpadding="0" cellspacing="0" border="0">
@@ -117,12 +117,12 @@
             <a href="http://python.org/"><img src="python_powered.gif" /></a>
           </li>
         </ul>
-    </div><!--footer-->
+    </div>
     </div>
 
-  </div><!--site-->
+  </div>
 
-</div><!--main-->
+</div>
 
 </body>
 
