--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
   <script type="text/javascript" src="reflection.js"></script>
+  <script type="text/javascript" src="swfobject.js"></script>
   <link href="style.css" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+    var flashvars = {langue : 'fr'};
+    swfobject.embedSWF("menu.swf", "banner", "800", "118", "9.0.0", "expressInstall.swf", flashvars);
+  </script>
 </head>
 
 <body>
@@ -11,10 +16,10 @@
   <div class="site" id="site">
 
     <div class="header" id="header">
-      <object width="800" height="118">
-        <param name="movie" value="menu.swf">
-        <embed src="menu.swf" width="800" height="118"/>
-      </object>
+      <div id="banner">
+        <h1>Veuillez installer flashplayer</h1>
+        <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
+      </div>
       <div id="logo-affinitic">
           <a href="http://www.affinitic.be"></a>
       </div>
@@ -24,7 +29,8 @@
       <div class="content-top">
         <span id="title" class="title">Affinitic</span>
       </div>
-      <div class="content-top-second"></div>
+      <div class="content-top-second">
+      </div>
 
       <div class="content-middle">
         <div class="content-middle-center">
@@ -117,12 +123,13 @@
             <a href="http://python.org/"><img src="python_powered.gif" /></a>
           </li>
         </ul>
-    </div>
+      </div>
     </div>
 
   </div>
 
 </div>
+
 
 </body>
 
