Add title tag to be able to override it ##

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -7,6 +7,7 @@
     var flashvars = {langue : 'fr'};
     swfobject.embedSWF("menu.swf", "banner", "800", "118", "9.0.0", "expressInstall.swf", flashvars);
   </script>
+  <title></title>
 </head>
 
 <body>
