Change background of the menu refs #1956

--- a/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/index.html
@@ -5,7 +5,8 @@
   <link href="style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript">
     var flashvars = {langue : 'fr'};
-    swfobject.embedSWF("menu.swf", "banner", "800", "118", "9.0.0", "expressInstall.swf", flashvars);
+    var params = {wmode:'transparent'};
+    swfobject.embedSWF("menu.swf", "banner", "800", "118", "9.0.0", "expressInstall.swf", flashvars, params);
   </script>
   <title></title>
 </head>
