Fix logo link This refs #3610

--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -38,7 +38,7 @@
         <div id="background-menu"></div>
         <div id="menu-shadow"></div>
         <div id="container">
-            <a href="/"><img src="images/affinitic-logo.png" alt="Affinitic" id="logo" /></a>
+            <a href="" id="logo-link"><img src="images/affinitic-logo.png" alt="Affinitic" id="logo" /></a>
             <div id="menu-language">
                 <a href="#">FR</a> - <a href="#">EN</a>
             </div>
