--- a/affinitic/skin/static/index.html
+++ b/affinitic/skin/static/index.html
@@ -36,7 +36,7 @@
         </div>
         
         
-        <footer id="footer"></footer><!--footer-->
+        <!--<footer id="footer"></footer>--><!--footer-->
     </div><!--main-content-->
     <div id="supersized"></div>
 </div><!--wrapper-->
